style: Fixed gap in navbar

--- a/crudproject/frontend/src/App.css
+++ b/crudproject/frontend/src/App.css
@@ -62,6 +62,8 @@
 
 .navbar-right {
   padding-right: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .navbar-container button {
